--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -37,7 +37,7 @@
       <view class='sjhcsj'>实际还车时间： 2018-11-03 17:50</view>
       <view class='qslc'>起始里程： 10</view>
       <view class='jslc'>结束里程： 110</view>
-      <view class='yjfy'>预计费用： 330</view>
+      <!-- <view class='yjfy'>预计费用： 330</view> -->
       <!-- <view class='zj'>租金： 140.58</view> -->
       <!-- <view class='zfy'> -->
         <!-- <view><b class="je">140.58</b>元</view> -->
