--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -5,6 +5,8 @@
 .xMap .csdw image{width: 100%; height: 100%;}
 .xMap .markerStart{width: 30px; height: 44px; position: absolute; left: 50%; bottom: 50%; margin-top: -22px; margin-left: -15px;}
 .xMap .markerStart image{width: 100%; height: 100%;}
+.xMap .markerEnd{width: 30px; height: 44px; position: absolute; left: 50%; bottom: 50%; margin-top: -22px; margin-left: -15px; display: none;}
+.xMap .markerEnd image{width: 100%; height: 100%;}
 .xMap .goToBack{width: 70rpx; height: 70rpx; position: absolute; left: 20rpx; top: 40rpx;}
 
 .tabs-item{ width: 100%; height: 40px; background-color: #fff; position: fixed; top: 0; left: 0; z-index:999; box-shadow: 0 5px 10px #e0e0e0;}
