--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -10,7 +10,7 @@
 .xMap .goToBack{width: 70rpx; height: 70rpx; position: absolute; left: 20rpx; top: 40rpx;}
 
 .tabs-item{ width: 100%; height: 40px; background-color: #fff; position: fixed; top: 0; left: 0; z-index:999; box-shadow: 0 5px 10px #e0e0e0;}
-.tabs-item .tabs-item-li{ width: 33.33333333333333%; display: table; text-align: center; font-size:14px; line-height: 40px; color:#000; float: left;}
+.tabs-item .tabs-item-li{ width: 25%; display: table; text-align: center; font-size:14px; line-height: 40px; color:#000; float: left;}
 .tabs-item .active{ color:#fca26e}
 
 .xContent{ width: 100%; height: auto; background-color: #fff; position: fixed; bottom: 0;  left: 0; z-index: 999; padding-bottom: 10rpx;}
