--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,9 +1,7 @@
 <view class="container">
   <view class='tabs-item'>
     <view class='topTabSwiper'>
-      <view class='tabs-item-li'>
-        <navigator url="/pages/shareCar/shareCar" hover-class="none">共享车</navigator>
-      </view>
+      <view class="tabs-item-li {{curIndex=='2'? 'active' : ''}}" data-id="2" bindtap="tabMenu">共享车</view>
       <view class="tabs-item-li {{curIndex=='0'? 'active' : ''}}" data-id="0" bindtap="tabMenu">网约车</view>
       <view class="tabs-item-li {{curIndex=='1'? 'active' : ''}}" data-id="1" bindtap="tabMenu">接送站</view>
       <view class='tabs-item-li'>
@@ -11,6 +9,34 @@
       </view>
     </view>
   </view>
+
+<!-- 共享车 -->
+  <block wx:if="{{curIndex == 2}}">
+  <view class="share-car">
+    <view class='share-box'>
+      <view class='item'>
+        <picker mode="selector" range="{{shareShopData}}" range-key='name' value="{{shareCar.startIndex}}" bindchange="shareStartShop">
+          <view class="picker">
+            {{shareShopData[startIndex].name || '取车点'}}
+          </view>
+        </picker>
+      </view>
+      <view class='item'>
+        <picker mode="selector" range="{{shareShopData}}" range-key='name' value="{{shareCar.startIndex}}" bindchange="shareStartShop">
+          <view class="picker">
+            {{shareShopData[endIndex].name || '还车点'}}
+          </view>
+        </picker>
+      </view>
+      <view class='item'>
+        <input placeholder="请填写您的手机号" value="{{shareCar.phone}}"></input>
+      </view>
+    </view>
+    <button class='goBtn' form-type="submit">确定租车</button>
+  </view>
+  </block>
+  <!-- 约车,接送 -->
+  <block wx:else>
   <map class="xMap" id='xMap' latitude="{{globalMapData.startLatitude}}" longitude="{{globalMapData.startLongitude}}" scale="{{scale}}" bindregionchange="bindregionchange" polyline="{{polyline}}" style="height:{{mapHeight}}px" show-location>
     <cover-view class="markerStart">
       <cover-image src='../../pages/image/markerStart.png' />
@@ -25,7 +51,6 @@
       <cover-image src='../../pages/image/goToBack.png' />
     </cover-view>
   </map>
-
   <view class="xContent" id='xContent'>
     <view class='user-info' wx:if="{{isGoBtn==false}}">
       <navigator url="/pages/order/order" hover-class="none">
@@ -57,4 +82,5 @@
       <button bindlongtap='gogo'>{{carXx}}</button>
     </cover-view>
   </view>
+  </block>
 </view>
