--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -16,8 +16,10 @@
       <view class='share-box'>
         <view class="time-item">
           <view class='strTime timeSty' bindtap="changeTime">
-            <view class='bold'>9-11</view>
-            <view class='xw'>周二 13:45</view>
+            <picker mode="time" value="{{time}}" start="09:00" end="21:00" bindchange="bindTimeChange">
+              <view class='bold'>9-11</view>
+              <view class='xw'>周二 13:45</view>
+            </picker>
           </view>
           <view class='dayNum'>
             <view class='constNum'>1天</view>
@@ -25,7 +27,7 @@
           <view class='endTime timeSty' bindtap="changeTime">
             <view class='bold'>9-12</view>
             <view class='xw'>周三 13:45</view>
-          </view>          
+          </view>
         </view>
         <view class='item'>
           <div class="s-icon">
@@ -59,41 +61,34 @@
   </block>
   <!-- 约车,接送 -->
   <block wx:else>
-    <map class="xMap" id='xMap' latitude="{{globalMapData.startLatitude}}"
-         longitude="{{globalMapData.startLongitude}}" scale="{{scale}}" bindregionchange="bindregionchange"
-         polyline="{{polyline}}" style="height:{{mapHeight}}px" show-location>
+    <map class="xMap" id='xMap' latitude="{{globalMapData.startLatitude}}" longitude="{{globalMapData.startLongitude}}" scale="{{scale}}" bindregionchange="bindregionchange" polyline="{{polyline}}" style="height:{{mapHeight}}px" show-location>
       <cover-view class="markerStart">
-        <cover-image src='../../pages/image/markerStart.png'/>
+        <cover-image src='../../pages/image/markerStart.png' />
       </cover-view>
       <cover-view class="markerEnd">
-        <cover-image src='../../pages/image/markerEnd.png'/>
+        <cover-image src='../../pages/image/markerEnd.png' />
       </cover-view>
       <cover-view class="csdw" bindtap="moveToLocation">
-        <cover-image src='../../pages/image/location.png'/>
+        <cover-image src='../../pages/image/location.png' />
       </cover-view>
       <cover-view class="goToBack" bindtap="goToBack" wx:if="{{isGotoBackBtn==true}}">
-        <cover-image src='../../pages/image/goToBack.png'/>
+        <cover-image src='../../pages/image/goToBack.png' />
       </cover-view>
     </map>
     <view class="xContent" id='xContent'>
-      <view class='user-info' wx:if="{{isGoBtn==false}}" bindtap="goToUI" data-un="{{userInfo.userNames}}"
-            data-up="{{userInfo.userPhone}}">
+      <view class='user-info' wx:if="{{isGoBtn==false}}" bindtap="goToUI" data-un="{{userInfo.userNames}}" data-up="{{userInfo.userPhone}}">
         <view class='names'>{{userInfo.userNames}}</view>
         <view class='phone'>{{userInfo.userPhone}}</view>
       </view>
       <view class='ShuttleType' wx:if="{{curIndex==1}}">
         <view class='category' wx:if="{{isGoBtn==false}}">
-          <view class="options wyc {{cType=='0'? 'active' : ''}}" bindtap="cTypeTap" data-id="0"
-                data-name="网约车">网约车
+          <view class="options wyc {{cType=='0'? 'active' : ''}}" bindtap="cTypeTap" data-id="0" data-name="网约车">网约车
           </view>
-          <view class="options jshcz {{cType=='1'? 'active' : ''}}" bindtap="cTypeTap" data-id="1"
-                data-name="接送火车站">接送火车站
+          <view class="options jshcz {{cType=='1'? 'active' : ''}}" bindtap="cTypeTap" data-id="1" data-name="接送火车站">接送火车站
           </view>
         </view>
         <view class='chooseTime' wx:if="{{isGoBtn==false}}">
-          <picker class='time-picker' mode="multiSelector" bindchange="bindStartMultiPickerChange"
-                  bindtap='pickerTap' bindcolumnchange="bindMultiPickerColumnChange" markers="{{markers}}"
-                  value="{{multiIndex}}" range="{{multiArray}}">{{startDate}}
+          <picker class='time-picker' mode="multiSelector" bindchange="bindStartMultiPickerChange" bindtap='pickerTap' bindcolumnchange="bindMultiPickerColumnChange" markers="{{markers}}" value="{{multiIndex}}" range="{{multiArray}}">{{startDate}}
           </picker>
         </view>
       </view>
