--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -16,17 +16,19 @@
       <view class='share-box'>
         <view class="time-item">
           <view class='strTime timeSty' bindtap="changeTime">
-            <picker mode="time" value="{{time}}" start="09:00" end="21:00" bindchange="bindTimeChange">
+            <picker mode="multiSelector" bindchange="bindMultiPickerChange" bindcolumnchange="bindMultiPickerColumnChange" value="{{multiIndex}}" range="{{multiArray}}">
               <view class='bold'>9-11</view>
-              <view class='xw'>周二 13:45</view>
+              <view class='xw'>{{multiArray[1][multiIndex[1]]}} {{multiArray[2][multiIndex[2]]}}</view>
             </picker>
           </view>
           <view class='dayNum'>
             <view class='constNum'>1天</view>
           </view>
           <view class='endTime timeSty' bindtap="changeTime">
-            <view class='bold'>9-12</view>
-            <view class='xw'>周三 13:45</view>
+            <picker mode="multiSelector" bindchange="bindMultiPickerChange" bindcolumnchange="bindMultiPickerColumnChange" value="{{multiIndex}}" range="{{multiArray}}">
+              <view class='bold'>9-12</view>
+              <view class='xw'>{{multiArray[1][multiIndex[1]]}} {{multiArray[2][multiIndex[2]]}}</view>
+            </picker>
           </view>
         </view>
         <view class='item'>
@@ -88,8 +90,7 @@
           </view>
         </view>
         <view class='chooseTime' wx:if="{{isGoBtn==false}}">
-          <picker class='time-picker' mode="multiSelector" bindchange="bindStartMultiPickerChange" bindtap='pickerTap' bindcolumnchange="bindMultiPickerColumnChange" markers="{{markers}}" value="{{multiIndex}}" range="{{multiArray}}">{{startDate}}
-          </picker>
+          <picker class='time-picker' mode="multiSelector" bindchange="bindStartMultiPickerChange" bindtap='pickerTap' bindcolumnchange="bindMultiPickerColumnChange" value="{{multiIndex}}" range="{{multiArray}}">{{startDate}}</picker>
         </view>
       </view>
 
